--- a/accent.scss
+++ b/accent.scss
@@ -3,5 +3,5 @@
    ========================================================================== */
 
 
-$highlightcolor : #CC0000;
+$highlightcolor : #00b38f;
 $lowlightcolor  : #000; 
